chang size toggle table

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
       <div class="modal-body">
         <div class='size-checkboxs'></div>
-        <div class="table-responsive" data-submitData=''>
+        <div class="table-responsive">
           <table class="table table-bordered" id="size-table">
             <thead id="size-table-thead"></thead>
             <tbody id="size-table-tbody"></tbody>
