--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>BOM</title>
   <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="./patternNum.css">
+  <link rel="stylesheet" href="bom-update.css">
   <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
   <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-<button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#sizeUpdateModal">编辑</button>
+
+<button class="btn btn-primary btn-lg" data-toggle="modal">编辑</button>
 
 <!-- 模态框（Modal） -->
 <div class="modal fade" id="sizeUpdateModal" tabindex="-1" role="dialog" aria-labelledby="sizeUpdateModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+        <button type="button" class="close size-modal-close" data-dismiss="modal" aria-hidden="true">
           &times;
         </button>
         <h4 class="modal-title" id="sizeUpdateModalLabel">
@@ -27,7 +28,12 @@
         </h4>
       </div>
       <div class="modal-body">
-        <div class='size-checkboxs'></div>
+        <div class='table-header'>
+          <div class='size-checkboxs'></div>
+          <div class='add-tr-wrap'>
+            <button type="button" class="btn btn-warning" id='add-tr-item'>添加</button>
+          </div>
+        </div>
         <div class="table-responsive">
           <table class="table table-bordered" id="size-table">
             <thead id="size-table-thead"></thead>
@@ -42,6 +48,6 @@
   </div><!-- /.modal -->
 </div>
 
-<script src='./patternNum.js'></script>
+<script src='bom-update.js'></script>
 </body>
 </html>
