--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
 </head>
 <body>
 
-<button class="btn btn-primary btn-lg" data-toggle="modal">编辑</button>
+<button class="btn btn-primary btn-lg bom-update-btn" data-toggle="modal">编辑</button>
+<button class="btn btn-primary btn-lg bom-add-btn" data-toggle="modal">添加</button>
 
-<!-- 模态框（Modal） -->
+<!-- 编辑尺码 - 模态框（Modal） -->
 <div class="modal fade" id="sizeUpdateModal" tabindex="-1" role="dialog" aria-labelledby="sizeUpdateModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close size-modal-close" data-dismiss="modal" aria-hidden="true">
+        <button type="button" class="close size-update-modal-close" data-dismiss="modal" aria-hidden="true">
           &times;
         </button>
         <h4 class="modal-title" id="sizeUpdateModalLabel">
@@ -31,23 +32,57 @@
         <div class='table-header'>
           <div class='size-checkboxs'></div>
           <div class='add-tr-wrap'>
-            <button type="button" class="btn btn-warning" id='add-tr-item'>添加</button>
+            <button type="button" class="btn btn-warning" id='size-update-add-tr'>添加</button>
           </div>
         </div>
         <div class="table-responsive">
-          <table class="table table-bordered" id="size-table">
-            <thead id="size-table-thead"></thead>
-            <tbody id="size-table-tbody"></tbody>
+          <table class="table table-bordered" id="size-update-table">
+            <thead id="size-update-table-thead"></thead>
+            <tbody id="size-update-table-tbody"></tbody>
           </table>
         </div>
       </div>
       <div class="modal-footer">
-        <button type="button" id="submit-table-btn" class="btn btn-info">提交</button>
+        <button type="button" id="submit-update-table-btn" class="btn btn-info">提交</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal -->
+</div>
+
+<!-- 新增尺码 - 模态框（Modal） -->
+<div class="modal fade" id="sizeAddModal" tabindex="-1" role="dialog" aria-labelledby="sizeUpdateModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close size-add-modal-close" data-dismiss="modal" aria-hidden="true">
+          &times;
+        </button>
+        <h4 class="modal-title" id="sizeAddModalLabel">
+          添加尺码
+        </h4>
+      </div>
+      <div class="modal-body">
+        <div class='table-header'>
+          <div class='size-checkboxs'></div>
+          <div class='add-tr-wrap'>
+            <button type="button" class="btn btn-warning" id='size-add-add-tr'>添加</button>
+          </div>
+        </div>
+        <div class="table-responsive">
+          <table class="table table-bordered" id="size-add-table">
+            <thead id="size-add-table-thead"></thead>
+            <tbody id="size-add-table-tbody"></tbody>
+          </table>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" id="submit-add-table-btn" class="btn btn-info">提交</button>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal -->
 </div>
 
 <script src='bom-update.js'></script>
+<script src='bom-add.js'></script>
 </body>
 </html>
