--- a/materials.html
+++ b/materials.html
@@ -10,6 +10,9 @@
   <link rel="stylesheet" href="materials.css">
   <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
   <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+  <link href="./select2.min.css" rel="stylesheet" />
+  <script src="./select2.min.js"></script>
 </head>
 <body>
 <button class="btn btn-primary btn-lg materials-update-btn" data-toggle="modal">
